# Skirt

./: .clang-format  .eslintrc.js  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  RT  broker.js  bs.js  bs_test.html  build.ninja  builddeps.sh  buildgen.sh  example.scene  index.html  ninjagen.sh  object.js  package.json  raytracer.js  scene.js  texture.js  utils.js  wasm.html  wasm_tests.html  worker.js  worker_rcl.js
3rdp/patch/: glog.patch
3rdp/patches/: glog.patch
data/: example.scene
images/: test.exr  test.pfm
rcl/: Makefile  index.html  mat4.h  objects.h  perlin.h  raytracer.h  rcl.cpp  rcl.mjs  rcl.wasm  scene.h  texture.h  utils.h  vec3.h
src/core/: AABB.cc  AABB.h  EFloat.h  Element.cc  Element.h  Film.cc  Film.h  Hit.h  Integrator.cc  Integrator.h  Mat4.h  Matrix4.cc  Matrix4.h  Ray.h  Scene.cc  Scene.h  Shape.h  StringPrintf.cpp  StringPrintf.h  Vector2.h  Vector3.h  config.h.in  main.cc  main.cpp  mat4.h  math.h  skirt.h  vec3.h
src/loader/: Loader.cc  Loader.h  parser.cc  parser.h
src/shapes/: Sphere.cc  Sphere.h
src/tests/: AABB.cc  Loader.cc  Matrix4.cc  main.cc  math.cc  test.h  test_main.cc
tools/: skirt_tests_pre.js
